Clean up editor GUI code